# major-minors

./: .gitattributes  README.md  compose.yaml
controllers/: api.py  articles.py  articles_backup.py  contact.py  data.py  images.py  index.py  ontology.py  people.py  presentation.py  press.py  search.py  sentiment.py  (+1 more)
flask/: Dockerfile  app.py  config.py  pyproject.toml  wsgi.py
flask/app/: app.py  config.py  wsgi.py
flask/app/controllers/: api.py  articles.py  articles_backup.py  comments.py  contact.py  data.py  images.py  index.py  minorities.py  ontology.py  people.py  presentation.py  press.py  science.py  search.py  sentiment.py  sparql.py  support.py  webvowl.py
flask/app/libraries/flask_paginate/: __init__.py
flask/app/models/: db.py  queries.py
flask/app/static/css/: style.css
flask/app/static/js/: minorias.js
flask/app/static/vue/js/: app.9383ebb3.js  chunk-vendors.c8f595d1.js
flask/app/static/webvowl/data/: ontology_skeleton_backup.json
flask/app/static/webvowl/js/: webvowl.app.js
flask/app/views/: contact.html  index.html  migrantes.html  refugiados.html  search.html  search_backup.html  sparql.html
flask/controllers/: comments.py  minorities.py  science.py  sparql.py  support.py
flask/models/: comments.json  db.py
flask/ontologies/: ontologia-publico.ttl
flask/static/css/: style_backup.css
flask/static/vue/css/: chunk-vendors.c14f3ce1.css
flask/static/webvowl/data/: ontology_skeleton.json
flask/views/: africanos.html  animais.html  ciganos.html  comments.html  minorities.html  presentation.html  sparql_mal_delete.html
(+33 files in other folders)
