[tool.poetry]
name = "major-minors"
version = "1.0.0"
description = ""
authors = ["Paulo Martins <paulo.jorge.pm@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11.6"
Flask = "3.0.2"
Flask-Cors = "4.0.0"
pillow = "10.2.0"
gunicorn = "^23.0.0"
requests = "^2.32.3"
cachetools = "^5.5.2"
markupsafe = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

